--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,9 +21,10 @@ button {background-color: green;
 .right-side {
 	height: 50px;
 	width: 200px;
-	display: inline-block;
+	display: block;
 	background-color: yellow;
 	float: right;
+	position: absolute;
 }
 
 </style>
