--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,8 @@ button {background-color: green;
 	width: 200px;
 	display: block;
 	background-color: white;
-	padding-top: 10px;
+	padding: 10px;
+	margin-left: 200px;
 }
 
 .right-side {
